--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title:          Segyo
-description:    "Segyo's babble"
+title:          Segyo's babbles
+description:    "Segyo's babbles"
 url:            "https://myungsekyo.github.io/"
 
 # Google Analytics
