--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title:          Segyo's babbles
-description:    "Segyo's babbles"
+title:          Segyo's babbling
+description:    "Segyo's babbling"
 url:            "https://myungsekyo.github.io/"
 
 # Google Analytics
