--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title:          Segyo's babbling
-description:    "Segyo's babbling"
+title:          세교's 영어 옹알이
+description:    "세교's 영어 옹알이"
 url:            "https://myungsekyo.github.io/"
 
 # Google Analytics
